--- a/locale/de/LC_MESSAGES/meerk40t.po
+++ b/locale/de/LC_MESSAGES/meerk40t.po
@@ -6003,8 +6003,8 @@ msgid "Align laser with the first position"
 msgstr "Richten Sie den Laser an der ersten Position aus"
 
 #: meerk40t/gui/navigationpanels.py:414
-msgid "Perform a convex hull trace of the selection (Right different algorithm)"
-msgstr "Umrisse der Auswahl genau nachfahren (Rechtsclick: anderer Algorithmus)"
+msgid "Perform a convex hull trace of the selection"
+msgstr "Umrisse der Auswahl genau nachfahren"
 
 #: meerk40t/gui/navigationpanels.py:420
 msgid "Perform a simple trace of the selection (Right=Circle around)"
