--- a/locale/pt_PT/LC_MESSAGES/meerk40t.po
+++ b/locale/pt_PT/LC_MESSAGES/meerk40t.po
@@ -4094,7 +4094,7 @@ msgid "Align laser with the first position"
 msgstr "Alinhar o laser com a primeira posição"
 
 #: meerk40t/gui/navigationpanels.py:416
-msgid "Perform a convex hull trace of the selection (Right different algorithm)"
+msgid "Perform a convex hull trace of the selection"
 msgstr ""
 
 #: meerk40t/gui/navigationpanels.py:422
